# ml-project

./: .gitignore  POLK Census experiment.ipynb  README.md  Xtest0.txt  Xtest1.txt  Xtrain0.txt  Xtrain2.txt  census_polk.py  decl.pxd  grad.pyx  gradient_descent.cpp  gradient_descent.h  gradient_descent_setup.py  kernel.cpp  kernel.h  makefile  ml_project.pyx  model.cpp  model.h  omp.cpp  setup.cfg  setup.py  test_batch_kernel_regression.py  test_data.npy  test_grad.py  test_gradient_descent.cpp  test_kernel.py  test_kernels.cpp  test_labels.npy  test_omp.cpp  train_data.npy  train_labels.npy  transformed_data.npy  utilities.cpp  utilities.h  ytest0.txt  ytrain0.txt  ytrain1.txt  ytrain2.txt
cmake-fiddle/: CMakeLists.txt
tests/: Xtest2.txt  Xtrain1.txt  data.npy  experiments.py  figures.py  makefile  test_batch_gradient_descent.py  test_batch_kernel_regression.py  test_grad.py  test_kernel.py  test_stochastic_gradient_descent.py  test_stochastic_kernel_regression.py  test_util.py  ytest1.txt  ytest2.txt
